# stdirgen

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: check.yml  release.yml  test.yml
src/: cli.rs  create_dir.rs  create_file.rs  create_subfiles.rs  lib.rs  main.rs
src/errors/: create_error.rs  split_error.rs
src/utils/: split_string.rs
tests/: test_dir_command.rs  test_file_command.rs
