[package]
name = "stdirgen"
version = "0.1.0"
edition = "2021"
authors = ["J.Z.W"]
description = "A standardized file and directory generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.8.1"
